@@ -117,6 +117,19 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|ComplexExplanation
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|DocIdSet
 import|;
 end_import
@@ -670,8 +683,21 @@ condition|(
 name|parents
 operator|==
 literal|null
+operator|||
+name|parents
+operator|.
+name|iterator
+argument_list|()
+operator|.
+name|docID
+argument_list|()
+operator|==
+name|DocIdSetIterator
+operator|.
+name|NO_MORE_DOCS
 condition|)
 block|{
+comment|//<-- means DocIdSet#EMPTY_DOCIDSET
 comment|// No matches
 return|return
 literal|null
@@ -726,7 +752,7 @@ name|Explanation
 name|explain
 parameter_list|(
 name|AtomicReaderContext
-name|reader
+name|context
 parameter_list|,
 name|int
 name|doc
@@ -734,20 +760,71 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-comment|// TODO
-throw|throw
-operator|new
-name|UnsupportedOperationException
+name|BlockJoinScorer
+name|scorer
+init|=
+operator|(
+name|BlockJoinScorer
+operator|)
+name|scorer
 argument_list|(
-name|getClass
+name|context
+argument_list|,
+literal|true
+argument_list|,
+literal|false
+argument_list|,
+name|context
+operator|.
+name|reader
 argument_list|()
 operator|.
-name|getName
+name|getLiveDocs
 argument_list|()
-operator|+
-literal|" cannot explain match on parent document"
 argument_list|)
-throw|;
+decl_stmt|;
+if|if
+condition|(
+name|scorer
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|scorer
+operator|.
+name|advance
+argument_list|(
+name|doc
+argument_list|)
+operator|==
+name|doc
+condition|)
+block|{
+return|return
+name|scorer
+operator|.
+name|explain
+argument_list|(
+name|context
+operator|.
+name|docBase
+argument_list|)
+return|;
+block|}
+block|}
+return|return
+operator|new
+name|ComplexExplanation
+argument_list|(
+literal|false
+argument_list|,
+literal|0.0f
+argument_list|,
+literal|"Not a match"
+argument_list|)
+return|;
 block|}
 annotation|@
 name|Override
@@ -800,6 +877,11 @@ name|parentDoc
 init|=
 operator|-
 literal|1
+decl_stmt|;
+DECL|field|prevParentDoc
+specifier|private
+name|int
+name|prevParentDoc
 decl_stmt|;
 DECL|field|parentScore
 specifier|private
@@ -1385,10 +1467,8 @@ name|nextDoc
 argument_list|()
 return|;
 block|}
-specifier|final
-name|int
 name|prevParentDoc
-init|=
+operator|=
 name|parentBits
 operator|.
 name|prevSetBit
@@ -1397,7 +1477,7 @@ name|parentTarget
 operator|-
 literal|1
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 comment|//System.out.println("  rolled back to prevParentDoc=" + prevParentDoc + " vs parentDoc=" + parentDoc);
 assert|assert
 name|prevParentDoc
@@ -1440,6 +1520,59 @@ decl_stmt|;
 comment|//System.out.println("  return nextParentDoc=" + nd);
 return|return
 name|nd
+return|;
+block|}
+DECL|method|explain
+specifier|public
+name|Explanation
+name|explain
+parameter_list|(
+name|int
+name|docBase
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|int
+name|start
+init|=
+name|docBase
+operator|+
+name|prevParentDoc
+operator|+
+literal|1
+decl_stmt|;
+comment|// +1 b/c prevParentDoc is previous parent doc
+name|int
+name|end
+init|=
+name|docBase
+operator|+
+name|parentDoc
+operator|-
+literal|1
+decl_stmt|;
+comment|// -1 b/c parentDoc is parent doc
+return|return
+operator|new
+name|ComplexExplanation
+argument_list|(
+literal|true
+argument_list|,
+name|score
+argument_list|()
+argument_list|,
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"Score based on child doc range from %d to %d"
+argument_list|,
+name|start
+argument_list|,
+name|end
+argument_list|)
+argument_list|)
 return|;
 block|}
 block|}
