@@ -4959,6 +4959,123 @@ argument_list|,
 name|joinResults
 argument_list|)
 expr_stmt|;
+name|TopDocs
+name|b
+init|=
+name|joinS
+operator|.
+name|search
+argument_list|(
+name|childJoinQuery
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|ScoreDoc
+name|hit
+range|:
+name|b
+operator|.
+name|scoreDocs
+control|)
+block|{
+name|Explanation
+name|explanation
+init|=
+name|joinS
+operator|.
+name|explain
+argument_list|(
+name|childJoinQuery
+argument_list|,
+name|hit
+operator|.
+name|doc
+argument_list|)
+decl_stmt|;
+name|Document
+name|document
+init|=
+name|joinS
+operator|.
+name|doc
+argument_list|(
+name|hit
+operator|.
+name|doc
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
+name|int
+name|childId
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|document
+operator|.
+name|get
+argument_list|(
+literal|"childID"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|explanation
+operator|.
+name|isMatch
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|hit
+operator|.
+name|score
+argument_list|,
+name|explanation
+operator|.
+name|getValue
+argument_list|()
+argument_list|,
+literal|0.0f
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"Score based on child doc range from %d to %d"
+argument_list|,
+name|hit
+operator|.
+name|doc
+operator|-
+literal|1
+operator|-
+name|childId
+argument_list|,
+name|hit
+operator|.
+name|doc
+operator|-
+literal|1
+argument_list|)
+argument_list|,
+name|explanation
+operator|.
+name|getDescription
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|// Test joining in the opposite direction (parent to
 comment|// child):
